--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mi-primer-app",
+  "name": "pettech",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
@@ -10,40 +10,45 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "^8.2.0",
+    "@expo/vector-icons": "^14.0.3",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-picker/picker": "^2.8.1",
+    "@react-navigation/bottom-tabs": "^7.1.3",
     "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/material-bottom-tabs": "^6.2.29",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
-    "axios": "^1.7.7",
+    "axios": "^1.7.8",
     "expo": "~51.0.28",
+    "expo-av": "^15.0.1",
+    "expo-constants": "~16.0.2",
+    "expo-device": "~6.0.2",
+    "expo-file-system": "~17.0.1",
+    "expo-image-picker": "~15.0.7",
+    "expo-linking": "~6.3.1",
+    "expo-notifications": "~0.28.19",
     "expo-status-bar": "~1.12.1",
-    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^2.20.0",
-    "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.5",
-    "react-native-qrcode-svg": "^6.3.12",
-    "react-native-reanimated": "^3.15.5",
-    "react-native-safe-area-context": "^4.11.1",
-    "react-native-screens": "^3.34.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.10",
-    "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4",
-    "tailwind-react-native-classnames": "^3.0.1",
-    "twrnc": "^4.5.1",
-    "expo-image": "~1.13.0"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "@types/react-native": "^0.73.0",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
