--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.7.8",
     "expo": "~51.0.28",
     "expo-av": "^15.0.1",
+    "expo-barcode-generator": "^3.0.2",
     "expo-constants": "~16.0.2",
     "expo-device": "~6.0.2",
     "expo-file-system": "~17.0.1",
